(fix): Background and foreground colors do not have a sufficient contrast ratio.

--- a/assets/style/theme.sass
+++ b/assets/style/theme.sass
@@ -10,7 +10,7 @@ h3,
 h4,
 h5,
 h6
-  @apply text-gray-800 tracking-tighter
+  @apply text-gray-900 tracking-tighter
 
 .app-link 
   &:hover
